frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: veljkoskrbic/hirely-frontend:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"  # Increased because Next.js needs more memory
            cpu: "500m"
          limits:
            memory: "512Mi"  # Increased for safety
            cpu: "500m"
        ports:
        - containerPort: 3000
